--- a/DataCamp Introduction to Shell.ipynb
+++ b/DataCamp Introduction to Shell.ipynb
@@ -2480,14 +2480,14 @@
    "outputs": [],
    "source": [
     "jhu@debian:~/.virtual_environments$ for i in titanic*; do echo $i; grep female $i | tail -n 3; done  ################\n",
-    "titanic_corrupt.txt                                          # ***************** Do not forget \"$\"s\n",
+    "titanic_corrupt.txt                                          # ***************** Do not forget \"$\" and \";\"\n",
     "886,0,3,female,39.0,0,5,382652,29.125,,Q\n",
     "888,1,1,female,19.0,0,0,112053,30.0,B42,S\n",
     "889,0,3,female,,1,2,W./C. 6607,23.45,,S\n",
     "titanic sub.csv\n",
     "grep: titanic: No such file or directory\n",
     "grep: sub.csv: No such file or directory\n",
-    "jhu@debian:~/.virtual_environments$ for i in titanic*; do echo $i | grep female $i | tail -n 3; done  #XXXXXXXXXXXXX#\n",
+    "jhu@debian:~/.virtual_environments$ for i in titanic*; do echo $i | grep female $i | tail -n 3; done  ###############\n",
     "886,0,3,female,39.0,0,5,382652,29.125,,Q\n",
     "888,1,1,female,19.0,0,0,112053,30.0,B42,S\n",
     "889,0,3,female,,1,2,W./C. 6607,23.45,,S\n",
@@ -2496,7 +2496,7 @@
     "jhu@debian:~/.virtual_environments$ \n",
     "\n",
     "\n",
-    "jhu@debian:~/.virtual_environments$ for i in titanic*; do echo $i grep female $i | tail -n 3; done  #XXXXXXXXXXXXXXX#\n",
+    "jhu@debian:~/.virtual_environments$ for i in titanic*; do echo $i grep female $i | tail -n 3; done  #################\n",
     "titanic_corrupt.txt grep female titanic_corrupt.txt\n",
     "titanic sub.csv grep female titanic sub.csv\n",
     "jhu@debian:~/.virtual_environments$ \n",
@@ -2523,6 +2523,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3bcb101d-ebaa-4160-a69c-731a4f0b082f",
+   "metadata": {},
+   "source": [
+    "# ###################################################################################################################"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cfb008f9-ba9c-457c-bf90-c5a1fddf7e7f",
    "metadata": {},
    "source": [
@@ -2530,10 +2538,10 @@
     "\n",
     "Unix has a bewildering variety of text editors. For this course, we will use a simple one called Nano. If you type \"nano filename\", it will open filename for editing (or create it if it doesn't already exist). You can move around with the arrow keys, delete characters using backspace, and do other operations with control-key combinations:\n",
     "\n",
-    "#    Ctrl + K: delete a line.\n",
-    "#    Ctrl + U: un-delete a line.\n",
-    "#    Ctrl + O: save the file ('O' stands for 'output'). You will also need to press Enter to confirm the filename!\n",
-    "#    Ctrl + X: exit the editor.\n",
+    "[    Ctrl + K: delete a line.]\n",
+    "[    Ctrl + U: un-delete a line.]\n",
+    "[    Ctrl + O: save the file ('O' stands for 'output'). You will also need to press Enter to confirm the filename!]\n",
+    "[    Ctrl + X: exit the editor.]\n",
     "\n",
     "Instructions\n",
     "100 XP\n",
@@ -2585,9 +2593,9 @@
     "\n",
     "When you are doing a complex analysis, you will often want to keep a record of the commands you used. You can do this with the tools you have already seen:\n",
     "\n",
-    "#    Run history.\n",
-    "#    Pipe its output to tail -n 10 (or however many recent steps you want to save).\n",
-    "#    Redirect that to a file called something like figure-5.history.\n",
+    "[    Run history.]\n",
+    "[    Pipe its output to tail -n 10 (or however many recent steps you want to save).]\n",
+    "[    Redirect that to a file called something like figure-5.history.]\n",
     "\n",
     "This is better than writing things down in a lab notebook because it is guaranteed not to miss any steps. It also illustrates the central idea of the shell: simple tools that produce and consume lines of text can be combined in a wide variety of ways to solve a broad range of problems.\n",
     "Instructions 1/3\n",
@@ -2654,13 +2662,15 @@
    "source": [
     "## How can I save commands to re-run later?\n",
     "\n",
-    "# You have been using the shell interactively so far. But since the commands you type in are just text, you can store them in files for the shell to run over and over again. To start exploring this powerful capability, put the following command in a file called headers.sh:\n",
+    "# *******************************************************************************************************************\n",
+    "You have been using the shell interactively so far. But since the commands you type in are just text, you can store them in files for the shell to run over and over again. To start exploring this powerful capability, put the following command in a file called [headers.sh]:\n",
+    "# *******************************************************************************************************************\n",
     "\n",
-    "# head -n 1 seasonal/*.csv\n",
+    "[head -n 1 seasonal/*.csv]\n",
     "\n",
     "# This command selects the first row from each of the CSV files in the seasonal directory. Once you have created this file, you can run it by typing:\n",
     "\n",
-    "# bash headers.sh\n",
+    "[bash headers.sh]\n",
     "\n",
     "This tells the shell (which is just a program called bash) to run the commands contained in the file headers.sh, which produces the same output as running the commands directly.\n",
     "Instructions 1/2\n",
@@ -2735,15 +2745,16 @@
    "source": [
     "## How can I re-use pipes?\n",
     "\n",
+    "# *******************************************************************************************************************\n",
     "A file full of shell commands is called a *shell script, or sometimes just a \"script\" for short. Scripts don't have to have names ending in .sh, but this lesson will use that convention to help you keep track of which files are scripts.\n",
     "\n",
     "# Scripts can also contain pipes. For example, if all-dates.sh contains this line:\n",
     "\n",
-    "# cut -d , -f 1 seasonal/*.csv | grep -v Date | sort | uniq\n",
+    "[cut -d , -f 1 seasonal/*.csv | grep -v Date | sort | uniq]\n",
     "\n",
     "then:\n",
     "\n",
-    "# bash all-dates.sh > dates.out\n",
+    "[bash all-dates.sh > dates.out]\n",
     "\n",
     "will extract the unique dates from the seasonal data files and save them in dates.out.\n",
     "Instructions 1/3\n",
@@ -2791,13 +2802,13 @@
     "# *******************************************************************************************************************\n",
     "A script that processes specific files is useful as a record of what you did, but one that allows you to process any files you want is more useful. To support this, you can use the special expression \"$@\" (dollar sign immediately followed by at-sign) to mean \"all of the command-line parameters given to the script\".\n",
     "\n",
-    "For example, if unique-lines.sh contains sort $@ | uniq, when you run:\n",
+    "For example, if [unique-lines.sh] contains [sort $@ | uniq], when you run:\n",
     "\n",
-    "# bash unique-lines.sh seasonal/summer.csv\n",
+    "[bash unique-lines.sh seasonal/summer.csv]   ########################################################################\n",
     "\n",
-    "# the shell replaces \"$@\" with seasonal/summer.csv and processes one file. If you run this:\n",
+    "the shell replaces [$@] with [seasonal/summer.csv] and processes one file. If you run this:\n",
     "\n",
-    "# bash unique-lines.sh seasonal/summer.csv seasonal/autumn.csv\n",
+    "[bash unique-lines.sh seasonal/summer.csv seasonal/autumn.csv]   ####################################################\n",
     "\n",
     "it processes two data files, and so on.\n",
     "\n",
@@ -2807,7 +2818,6 @@
     "\n",
     "    Question 1\n",
     "    Edit the script count-records.sh with Nano and fill in the two ____ placeholders with $@ and -l (the letter) respectively so that it counts the number of lines in one or more files, excluding the first line of each.\n",
-    "    \n",
     "    \n",
     "    \n",
     "    Question 2\n",
@@ -2848,6 +2858,8 @@
     "\n",
     "\n",
     "#####################################################################################################################\n",
+    "jhu@debian:~/.virtual_environments$ nano titanic_f_header.sh\n",
+    "\n",
     "for i in $@; do grep female -H -v $i | sort | head -n 4; done > titanic_f_header.txt\n"
    ]
   },
@@ -2859,19 +2871,19 @@
     "## How can I process a single argument?\n",
     "\n",
     "# *******************************************************************************************************************\n",
-    "As well as \"$@\", the shell lets you use \"$1\", \"$2\", and so on to refer to specific command-line parameters. You can use this to write commands that feel simpler or more natural than the shell's. For example, you can create a script called \"column.sh\" that selects a single column from a CSV file when the user provides the filename as the first parameter and the column as the second:\n",
+    "As well as [$@], the shell lets you use [$1], [$2], [$3], ..., and so on to refer to specific command-line parameters. You can use this to write commands that feel simpler or more natural than the shell's.  For example, you can create a script called [column.sh] that selects a single column from a CSV file when the user provides the filename as the first parameter and the column as the second:\n",
     "\n",
-    "# cut -d , -f $2 $1\n",
+    "[cut -d , -f $2 $1]\n",
     "\n",
     "and then run it using:\n",
     "\n",
-    "# bash column.sh seasonal/autumn.csv 1\n",
+    "[bash column.sh seasonal/autumn.csv 1]\n",
     "\n",
-    "Notice how the script uses the two parameters in reverse order.\n",
+    "# Notice how the script uses the two parameters in reverse order.\n",
     "\n",
     "The script get-field.sh is supposed to take a filename, the number of the row to select, the number of the column to select, and print just that field from a CSV file. For example:\n",
     "\n",
-    "# bash get-field.sh seasonal/summer.csv 4 2\n",
+    "[bash get-field.sh seasonal/summer.csv 4 2]\n",
     "\n",
     "# should select the second field from line 4 of seasonal/summer.csv. Which of the following commands should be put in get-field.sh to do that?\n",
     "Answer the question\n",
@@ -2879,16 +2891,12 @@
     "Possible Answers\n",
     "\n",
     "    head -n $1 $2 | tail -n 1 | cut -d , -f $3\n",
-    "    press\n",
     "    1\n",
     "#    head -n $2 $1 | tail -n 1 | cut -d , -f $3  ####################################################################\n",
-    "    press\n",
     "    2\n",
     "    head -n $3 $1 | tail -n 1 | cut -d , -f $2\n",
-    "    press\n",
     "    3\n",
     "    head -n $2 $3 | tail -n 1 | cut -d , -f $1   Not this one, think careful\n",
-    "    press\n",
     "    4"
    ]
   },
@@ -2899,6 +2907,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#####################################################################################################################\n",
     "for i in $2; do grep female -H -v $i | sort | head -n $1; done > titanic_f_header.txt\n",
     "\n",
     "\n",
@@ -2945,7 +2954,7 @@
     "\n",
     "Note that in Nano, \"copy and paste\" is achieved by navigating to the line you want to copy, pressing CTRL + K to cut the line, then CTRL + U twice to paste two copies of it.\n",
     "\n",
-    "As a reminder, to save what you have written in Nano, type Ctrl + O to write the file out, then Enter to confirm the filename, then Ctrl + X to exit the editor.\n",
+    "As a reminder, to save what you have written in Nano, type [Ctrl + O] to write the file out (Nano will guide you), then Enter to confirm the filename, then [Ctrl + X] to exit the editor.\n",
     "Instructions 1/4\n",
     "25 XP\n",
     "\n",
@@ -2953,15 +2962,12 @@
     "#    Use Nano to edit the script range.sh and replace the two ____ placeholders with \"$@\" and \"-v\" so that it lists the names and number of lines in all of the files given on the command line without showing the total number of lines in all files. (Do not try to subtract the column header lines from the files.)\n",
     "    \n",
     "    \n",
-    "    \n",
     "    Question 2\n",
-    "#    Add \"sort -n\" and \"head -n 1\" in that order to the pipeline in range.sh to display the name and line count of the shortest file given to it.\n",
-    "    \n",
+    "    Add \"sort -n\" and \"head -n 1\" in that order to the pipeline in range.sh to display the name and line count of the shortest file given to it.\n",
     "    \n",
     "    \n",
     "    Questio 3\n",
     "#    Add a second line to range.sh to print the name and record count of the longest file in the directory as well as the shortest. This line should be a duplicate of the one you have already written, but with \"sort -n -r\" rather than \"sort -n\".\n",
-    "    \n",
     "    \n",
     "    \n",
     "    Question 4\n",
@@ -3038,16 +3044,18 @@
     "\n",
     "Shell scripts can also contain loops. You can write them using semi-colons, or split them across lines without semi-colons to make them more readable:\n",
     "\n",
-    "# Print the first and last data records of each file.\n",
+    "Print the first and last data records of each file.\n",
+    "[\n",
     "for filename in $@\n",
     "do\n",
     "    head -n 2 $filename | tail -n 1\n",
     "    tail -n 1 $filename\n",
     "done\n",
+    "]\n",
     "\n",
     "(You don't have to indent the commands inside the loop, but doing so makes things clearer.)\n",
     "\n",
-    "# The first line of this script is a comment to tell readers what the script does. Comments start with the # character and run to the end of the line. Your future self will thank you for adding brief explanations like the one shown here to every script you write.\n",
+    "The first line of this script is a comment to tell readers what the script does. Comments start with the [#] character and run to the end of the line. Your future self will thank you for adding brief explanations like the one shown here to every script you write.\n",
     "\n",
     "As a reminder, to save what you have written in Nano, type Ctrl + O to write the file out, then Enter to confirm the filename, then Ctrl + X to exit the editor.\n",
     "Instructions 1/3\n",
@@ -3057,10 +3065,8 @@
     "#    Fill in the placeholders in the script date-range.sh with $filename (twice), head, and tail so that it prints the first and last date from one or more files.\n",
     "    \n",
     "    \n",
-    "    \n",
     "    Question 2\n",
     "    Run date-range.sh on all four of the seasonal data files using seasonal/*.csv to match their names.\n",
-    "    \n",
     "    \n",
     "    \n",
     "    Question 3\n",
@@ -3084,10 +3090,12 @@
     "  head -n 3\n",
     "done\n",
     "> worldbank_GDP3.txt\n",
+    "#####################################################################################################################\n",
+    "\n",
     "\n",
     "\n",
     "# Above shell script does not save the output to given file name, but print the outcome out, but if you add the \n",
-    "# \">worldbank_GDP3.txt\" at the riight position, it works as expected\n",
+    "# \">worldbank_GDP3.txt\" at the right position, it works as expected\n",
     "jhu@debian:~/.virtual_environments$ bash worldbank_GDP3.sh\n",
     "jhu@debian:~/.virtual_environments$ cat worldbank_GDP3.txt \n",
     "(standard input):Japan,JPN,GDP (current US$),2010,5700100000000.0\n",
@@ -3123,17 +3131,17 @@
     "\n",
     "# A common mistake in shell scripts (and interactive commands) is to put filenames in the wrong place. If you type:\n",
     "\n",
-    "tail -n 3\n",
+    "[tail -n 3]\n",
     "\n",
     "then since tail hasn't been given any filenames, it waits to read input from your keyboard. This means that if you type:\n",
     "\n",
-    "# head -n 5 | tail -n 3 somefile.txt\n",
+    "[head -n 5 | tail -n 3 somefile.txt]\n",
     "\n",
     "# then tail goes ahead and prints the last three lines of somefile.txt, but head waits forever for keyboard input, since it wasn't given a filename and there isn't anything ahead of it in the pipeline.\n",
     "\n",
     "Suppose you do accidentally type:\n",
     "\n",
-    "head -n 5 | tail -n 3 somefile.txt\n",
+    "[head -n 5 | tail -n 3 somefile.txt]\n",
     "\n",
     "What should you do next?\n",
     "Instructions\n",
